kubernetes/catalog/adguard-home/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/SiwatINC/unraid-ca-repository/master/docker-template/adguard_home.xml
# Category: Network, Network-DNS
# Stars: 1403 | Downloads: 168597858
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: medium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: adguard-home
          image: adguard/adguardhome
          # No environment variables defined
          ports:
            - containerPort: 3000
              protocol: TCP
              name: webui
            - containerPort: 53
              protocol: TCP
              name: dns-server-tc
            - containerPort: 53
              protocol: UDP
              name: dns-server-ud-u
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: adguard-home-data-0
              mountPath: "/opt/adguardhome/work"
            - name: adguard-home-data-1
              mountPath: "/opt/adguardhome/conf"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
      - name: adguard-home-data-0
        persistentVolumeClaim:
          claimName: adguard-home-data-0
      - name: adguard-home-data-1
        persistentVolumeClaim:
          claimName: adguard-home-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: webui
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-server-tc
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-server-ud-u
  type: ClusterIP
