kubernetes/catalog/adguard-home/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home
  namespace: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard-home.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: adguard-home
          port: 3000
  tls:
    secretName: int-rlservers-com-tls
